--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
+  flutter_bloc: ^8.1.3
+  provider: ^6.1.1
 
 
 dev_dependencies:
